--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -37,6 +37,7 @@ output:
 
 </style>
 ```
+
 ```{r setup, echo=FALSE, message = FALSE}
 library(knitr)
 library(here)
@@ -100,45 +101,7 @@ Finally, we encourage the reader to consider the TEMM water service boundary lay
 
 # Report outline
 
-The following outline reflects a summary of key findings, followed by a description of each Tier in the TEMM approach. Notably, the TEMM may be refined and re-run as new data sources are ingested or improvements are made to matching and modeling algorithms.
-
-*Key Results*
-
--   A nationwide water service boundary layer is provided for X community water systems covering Y population\
--   Coverage rates per Tier:
-    -   Tier 1: X% (count in millions)\
-    -   Tier 2: Y% (count in millions)\
-    -   Tier 3: Z% (count in millions)\
--   Unequal Tier distribution across states suggests that the confidence in water service boundary location and extent varies by state and system.\
--   Uncertainty metrics for Tier 2 and 3 estimates suggest that the TEMM approach provides a reasonable preliminary water service boundary layer.
-
-*Tier 1: Explicit boundaries*
-
--   Data discovered for X states.\
--   We consider these data as "high quality" and use them to model Tier 3 boundaries.
-
-*Tier 2: Matched TIGER proxy boundaries*
-
--   X% of water systems match a TIGER place by spatial intersection or name match.\
--   Spatial and name matching is constrained within the reported state to prevent out-of-state mismatches.\
--   For multiple spatial or name matches, minimum distance between the reported centroid of the PWSID and the TIGER place centroid is used to break ties.
-
-*Tier 3: Modeled boundaries*
-
--   Circular water service boundary estimates are calculated for all water systems; median, 5% and 95% confidence intervals are provided to reflect medium, low, and high water service boundary estimates.
--   The the multiple linear regression fit has an impressive $R^2 = 0.67$ and is mostly explained by service connection count, which intuitively makes sense: there is roughly linear scaling between service connection count and the spatial extent of a water service area.
-
-<br>
-
-# Key Results
-
-The key result of this study is a nationwide water service boundary layer. Here we show the proportion of population served by each TEMM Tier at nationwide and statewide scales.
-
-<br>
-
-## Tier coverage - nationwide
-
-```{r load}
+```{r read temm}
 library(tidyverse)
 library(tidymodels)
 library(sf)
@@ -152,14 +115,21 @@ mapviewOptions(fgb = FALSE)
 # load environmental variable for staging path 
 staging_path <- Sys.getenv("WSB_STAGING_PATH")
 
-# labeled data
+# read TEMM spatial output for key resul summary stats below
+temm <- here("temm_layer/2022-03-27_temm.geojson") %>% 
+  st_read(quiet = TRUE) %>% 
+  # drop this column because it's read as a list and causes mapview trouble
+  select(-service_area_type_code)
+
+# Tier 1 labeled data
 wsb_labeled_clean <- path(staging_path, "wsb_labeled_clean.geojson") %>% 
   st_read(quiet = TRUE)
 
 # service connection count cutoff for community water systems
 n_max <- 15
 
-# read the clean matched output and perform minor transforms for plots
+# read the clean matched output and perform minor transforms for plots.
+# this has the same number of rows as `temm`, but contains Tier 1 "radius"
 d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
   mutate(
     # transform radius from m to km
@@ -180,13 +150,7 @@ d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
 
 # popultion served by all water systems
 pop_total <- sum(d$population_served_count)
-```
 
-In total, the TEMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow(d))` water systems[^2].
-
-[^2]: Some water systems were excluded from this data layer. Specifically, 267 water systems were dropped because they had reported service connections or population less than 15, which we categorize as unreasonable given that community water systems are defined as serving at least 15 connections. We also assume that each connection must serve at least one person. Next, we removed 834 water systems associated with US territories; most excluded water systems in this step are found in Puerto Rico.
-
-```{r temm nationwide coverage count and prop}
 # calculate count and proportion of people served by each tier
 pop <- d %>% 
   group_by(tier) %>% 
@@ -195,6 +159,49 @@ pop <- d %>%
     prop  = round((sum(population_served_count)/pop_total)*100, 2)
   )
 ```
+
+
+The following outline reflects a summary of key findings, followed by a description of each Tier in the TEMM approach. Notably, the TEMM may be refined and re-run as new data sources are ingested or improvements are made to matching and modeling algorithms.
+
+*Key Results*
+
+-   A nationwide water service boundary layer is provided for `r nrow(d)` community water systems covering a total population of `r format_bign(pop_total)`.\
+-   Population coverage rates per Tier:
+    -   Tier 1: `r pop$prop[1]`% population covered (`r pop$count[1]` people)\
+    -   Tier 2: `r pop$prop[2]`% population covered (`r pop$count[2]` people)\
+    -   Tier 3: `r pop$prop[3]`% population covered (`r pop$count[3]` people)\
+-   Unequal Tier distribution across states suggests that the confidence in water service boundary location and extent varies by state and system.\
+-   Uncertainty metrics for Tier 2 and 3 estimates suggest that the TEMM approach provides a reasonable preliminary water service boundary layer.
+
+*Tier 1: Explicit boundaries*
+
+-   Data discovered for **`r length(unique(wsb_labeled_clean$state))`** states (`r paste(unique(wsb_labeled_clean$state), collapse = ", ")`).\
+-   We consider these data as "high quality" and use them to model Tier 3 boundaries.
+
+*Tier 2: Matched TIGER proxy boundaries*
+
+-   `r round(100*(nrow(filter(temm, !is.na(tiger_match_geoid))) / nrow(temm)), 2)`% of water systems match a TIGER place by spatial intersection or name match.\
+-   Spatial and name matching is constrained within the reported state to prevent out-of-state mismatches.\
+-   For multiple spatial or name matches, minimum distance between the reported centroid of the PWSID and the TIGER place centroid is used to break ties.
+
+*Tier 3: Modeled boundaries*
+
+-   Circular water service boundary estimates are calculated for all water systems; median, 5% and 95% confidence intervals are provided to reflect medium, low, and high water service boundary estimates.
+-   The the multiple linear regression fit has an impressive $R^2 = 0.67$ and is mostly explained by service connection count, which intuitively makes sense: there is roughly linear scaling between service connection count and the spatial extent of a water service area.
+
+<br>
+
+# Key Results
+
+The key result of this study is a nationwide water service boundary layer. Here we show the proportion of population served by each TEMM Tier at nationwide and statewide scales.
+
+<br>
+
+## Tier coverage - nationwide
+
+In total, the TEMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow(d))` water systems[^2].
+
+[^2]: Some water systems were excluded from this data layer. Specifically, 267 water systems were dropped because they had reported service connections or population less than 15, which we categorize as unreasonable given that community water systems are defined as serving at least 15 connections. We also assume that each connection must serve at least one person. Next, we removed 834 water systems associated with US territories; most excluded water systems in this step are found in Puerto Rico.
 
 About `r str_sub(pop$count, 1, 3)[1]` million people are covered by Tier 1 spatial data -- impressive given that only `r wsb_labeled_clean$state %>% unique() %>% length()` states that provided explicit boundary data. However, this relatively high coverage rate is unsurprising because these states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`) include notable centers of high-population like CA, TX, and PA.
 
@@ -284,12 +291,6 @@ include_graphics(here("src/analysis/sandbox/model_explore/etc/temm-nation.png"))
 Here, we zoom into California, Nevada, and Oregon -- three states with high proportions of Tier 1, 2, and 3 spatial boundaries respectively. The Tier 3 circular buffers in this interactive map represent median (50th percentile) model estimates. Note that when clicking on polygons in the map below, only Tier 2 and 3 data
 
 ```{r temm zoom ca nv or}
-# read TEMM output
-temm <- here("temm_layer/2022-03-27_temm.geojson") %>% 
-  st_read(quiet = TRUE) %>% 
-  # drop this column because it's read as a list and causes mapview trouble
-  select(-service_area_type_code)
-
 # plot CA, NV, OR
 temm %>% 
   filter(primacy_agency_code %in% c("CA", "NV", "OR")) %>% 
@@ -623,7 +624,7 @@ We fit random forest, xgboost, and multiple linear regression models to a traini
 
 ### Random Forest
 
-We first fit a random forest, starting with random forest model to the data because the algorithm has less strict assumptions, it can handle correlated predictors, and because the variable importance output can quickly indicate which variables explain the most variance in the dataset and hence, what to focus on with more interpretable linear models.
+We first fit a random forest to the Tier 1 labeled data because the algorithm has less strict assumptions compared to regression, it can handle correlated predictors, and because the variable importance output quickly indicates which variables explain the most variance in the dataset. This can confirm our understanding of the relationships in the data explored in the EDA above and direct what to focus on with more interpretable linear models.
 
 ### xgboost
 
